@@ -11,7 +11,7 @@ Copyright:
  2005-2007, Gunnar Wolf <gwolf@debian.org>
  2006, Frank Lichtenheld <djpig@debian.org>
  2007-2010, gregor herrmann <gregoa@debian.org>
- 2007-2009, Damyan Ivanov <dmn@debian.org>
+ 2007-2010, Damyan Ivanov <dmn@debian.org>
  2008, Roberto C. Sanchez <roberto@connexer.com>
  2009-2010, Salvatore Bonaccorso <salvatore.bonaccorso@gmail.com>
 License: GPL-2
