@@ -16,6 +16,8 @@ dh-make-perl (0.62) UNRELEASED; urgency=low
   * Uppercase "DISCLAIMER" in generated debian/copyright to make it more
     easily visible.
   * New option "--only": update only specified file(s) in --refresh mode.
+  * Update years of copyright. Sync copyright holders' list between
+    debian/copyright and lib/DhMakePerl.pm.
 
   [ Salvatore Bonaccorso ]
   * debian/copyright: Update to revision 135 of DEP5 Format-Specification for
